@@ -1,6 +1,6 @@
 {
-  "timestamp" : "2022-04-02T00:32:45Z",
-  "count" : 29,
+  "timestamp" : "2022-04-15T08:09:52Z",
+  "count" : 17,
   "count_minmax" : [ 12, 29 ],
   "count_prev_day_inc" : 18,
   "count_prev_day_dec" : 0,
