@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-04-14T16:09:35Z",
+  "timestamp" : "2022-04-15T08:09:52Z",
   "count_outdated" : 841,
   "uniques_outdated" : 45,
-  "count" : 993,
+  "count" : 981,
   "uniques" : 59,
   "views" : [
     {
       "timestamp": "2022-04-01T00:00:00Z",
-      "count": 29,
+      "count": 17,
       "count_minmax": [ 12, 29 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
