@@ -1,10 +1,10 @@
 {
-  "count": 152,
+  "count": 140,
   "uniques": 2,
   "views": [
     {
       "timestamp": "2022-04-01T00:00:00Z",
-      "count": 29,
+      "count": 17,
       "uniques": 2
     },
     {
