@@ -1,3 +1,9 @@
+2022-04-15T08:09:52Z:
+* notice: last 14d: all unq: 140 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 841 45 / 993 59
+* notice: next accum: outdated-all outdated-unq / all unq: 841 45 / 981 59
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -12 // +0 +0 / -0 -12
+
 2022-04-14T16:09:35Z:
 * notice: last 14d: all unq: 152 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 825 44 / 981 59
